#5 feat: 애플로그인 참고 자료 & 기존 프로젝트 병합 (maven to gradle, html은 안됨, api는 작동됨)